app/appv1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb-v1
  labels:
    app: hello
    version: v1
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
      version: v1
  template:
    metadata:
      labels:
        app: hello
        tier: web
        version: v1
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
