app/appv2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb-v2
  labels:
    app: hello
    version: v2
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
      version: v2
  template:
    metadata:
      labels:
        app: hello
        tier: web
        version: v2
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
