app/appv1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloweb-v1
  labels:
    app: hello
    version: v1
spec:
  selector:
    app: hello
    tier: web
    version: v1
  ports:
  - port: 80
    targetPort: 8080
