app/appv2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloweb-v2
  labels:
    app: hello
    version: v2
spec:
  selector:
    app: hello
    tier: web
    version: v2
  ports:
  - port: 80
    targetPort: 8080
